[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asset-monitoring-backend"
version = "0.1.0"
description = "Sistema de monitoramento de ativos por telemetria"
authors = [
    { name = "Marcelo Gustavo Ezequiel" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "pydantic",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]